tests/baselines/reference/tsxStatelessFunctionComponents1.errors.txt
tests/cases/conformance/jsx/file.tsx(12,16): error TS2322: Type '{ naaame: "world"; }' is not assignable to type 'IntrinsicAttributes & { name: string; }'.
  Property 'naaame' does not exist on type 'IntrinsicAttributes & { name: string; }'.
tests/cases/conformance/jsx/file.tsx(19,15): error TS2322: Type '{ name: 42; }' is not assignable to type 'IntrinsicAttributes & { name?: string; }'.
  Type '{ name: 42; }' is not assignable to type '{ name?: string; }'.
    Types of property 'name' are incompatible.
      Type '42' is not assignable to type 'string'.
tests/cases/conformance/jsx/file.tsx(21,15): error TS2322: Type '{ naaaaaaame: "no"; }' is not assignable to type 'IntrinsicAttributes & { name?: string; }'.
  Property 'naaaaaaame' does not exist on type 'IntrinsicAttributes & { name?: string; }'.


==== tests/cases/conformance/jsx/file.tsx (3 errors) ====
    
    function Greet(x: {name: string}) {
    	return <div>Hello, {x}</div>;
    }
    function Meet({name = 'world'}) {
    	return <div>Hello, {name}</div>;
    }
    
    // OK
    let a = <Greet name='world' />;
    // Error
    let b = <Greet naaame='world' />;
                   ~~~~~~~~~~~~~~
!!! error TS2322: Type '{ naaame: "world"; }' is not assignable to type 'IntrinsicAttributes & { name: string; }'.
!!! error TS2322:   Property 'naaame' does not exist on type 'IntrinsicAttributes & { name: string; }'.
    
    // OK
    let c = <Meet />;
    // OK
    let d = <Meet name='me' />;
    // Error
    let e = <Meet name={42} />;
                  ~~~~~~~~~
!!! error TS2322: Type '{ name: 42; }' is not assignable to type 'IntrinsicAttributes & { name?: string; }'.
!!! error TS2322:   Type '{ name: 42; }' is not assignable to type '{ name?: string; }'.
!!! error TS2322:     Types of property 'name' are incompatible.
!!! error TS2322:       Type '42' is not assignable to type 'string'.
    // Error
    let f = <Meet naaaaaaame='no' />;
                  ~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ naaaaaaame: "no"; }' is not assignable to type 'IntrinsicAttributes & { name?: string; }'.
!!! error TS2322:   Property 'naaaaaaame' does not exist on type 'IntrinsicAttributes & { name?: string; }'.
    